[package]
name = "hyperion-grabber-kms"
version = "0.1.0"
authors = ["Alixinne <alixinne@pm.me>"]
edition = "2024"

[dependencies]
bytes = "1.11.1"
clap = { version = "4.6.0", features = ["env", "derive"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
color-eyre = "0.6.5"
crossbeam-channel = "0.5.15"
drm = "0.15.0"
gbm = { version = "0.18.0", default-features = false }
glutin = { version = "0.32.3", default-features = false, features = ["egl"] }
hyperion = { version = "0.3.2", path = "..", default-features = false }
png = "0.18.1"
prost = "0.14.3"
signal-hook = "0.4.4"
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[build-dependencies]
gl_generator = "0.14.0"
