[package]
name = "hyperion"
version = "0.1.1"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
byteorder = "1.3.2"
bytes = "0.4.12"
futures = "0.1.28"
log = "0.4.7"
palette = "0.4.1"
serde = "1.0.97"
serde_derive = "1.0.97"
serde_json = "1.0.40"
tokio = "0.1.22"
stream-cancel = "0.4.4"
regex = "1.2.1"
base64 = "0.10.1"
prost = "0.5.0"
serde_yaml = "0.8.9"
humantime = "1.2.0"
circular-queue = "0.2.0"
approx = "0.1.1"
num-traits = "0.2.8"
hyper = "0.12.33"
hyper-staticfile = "0.4.1"
reset-router = { version = "0.6.5", git = "https://github.com/vtavernier/reset-router.git", branch = "feature/parts-extensions" }
hostname = "0.1.5"
validator = "0.9.0"
validator_derive = "0.9.0"
lazy_static = "1.3.0"
bitflags = "1.1.0"
pyo3 = "0.8.0"
error-chain = "0.12.1"

[build-dependencies]
prost-build = "0.5.0"
