[package]
name = "hyperion"
version = "0.1.1"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
byteorder = "1.3.2"
bytes = "0.4.12"
futures = "0.1.29"
log = "0.4.8"
palette = "0.5.0"
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
tokio = "0.1.22"
stream-cancel = "0.4.4"
regex = "1.3.1"
base64 = "0.11.0"
prost = "0.5.0"
serde_yaml = "0.8.11"
humantime = "1.3.0"
circular-queue = "0.2.2"
approx = "0.3.2"
num-traits = "0.2.10"
hyper = "0.12.35"
hyper-staticfile = "0.4.1"
reset-router = { version = "0.6.5", git = "https://github.com/vtavernier/reset-router.git", branch = "feature/parts-extensions" }
hostname = "0.2.0"
validator = "0.10.0"
validator_derive = "0.10.0"
lazy_static = "1.4.0"
bitflags = "1.2.1"
pyo3 = "0.8.3"
error-chain = "0.12.1"
websocket = "0.24.0"
atomicwrites = "0.2.5"

[build-dependencies]
prost-build = "0.5.0"
