[package]
name = "hyperiond"
version = "0.1.1"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "2.33.0", features = ["yaml"] }
failure = "0.1.5"
futures = "0.1.28"
stream-cancel = "0.4.4"
hyperion = { path = "../hyperion" }
log = "0.4.7"
tokio = "0.1.22"
tokio-signal = "0.2.7"
regex = "1.2.0"
serde_yaml = "0.8.9"
env_logger = "0.6.2"
exitcode = "1.1.2"
