[package]
name = "hyperiond"
version = "0.2.0"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
edition = "2018"

[dependencies]
hyperion = { path = "../hyperion" }

tokio = { version = "0.2.4", features = ["macros"] }
error-chain = "0.12.1"
env_logger = "0.7.1"
structopt = { version = "0.3.5", features = ["paw"] }
paw = "1.0.0"
